apertium-spa-cat: New upstream version
Other changes:
* Depends on latest apertium-cat/apertium-spa
* Build-Depends on python

Bug: T168857
Change-Id: Ic3da9d876b87da2954405b41655b0ba86c651ff7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+apertium-spa-cat (2.1.0~r79717-1) jessie-wikimedia; urgency=low
+
+  * Update to latest upstream release.
+  * debian/control:
+    + Build-Depends on python now.
+    + Updated apertium-cat/apertium-spa versioned dependencies.
+
+
+ -- Kartik Mistry <kartik@debian.org>  Tue, 27 Jun 2017 16:58:15 +0530
+
 apertium-spa-cat (2.0.0~r77288-2+wmf1) jessie-wikimedia; urgency=low
 
   * Rebuilt for Jessie.
