--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,14 @@
-2010-2017, Xavi Ivars <xavi.ivars@gmail.com>
-2017, Hèctor Alòs i Font <hectoralos@gmail.com>
-2013-2017, Kevin Brubeck Unhammer <unhammer@fsfe.org>
-2007-2016, Gema Ramírez Sánchez <gramirez@prompsit.com>
-2007-2015, Mikel L. Forcada <mlf@dlsi.ua.es>
-2007-2015, Francis M. Tyers <ftyers@prompsit.com>
+2017-2019, Jaume Ortolà i Font <jaumeortola@gmail.com>
+2010-2019, Xavi Ivars <xavi.ivars@gmail.com>
+2018-2019, Marc Riera Irigoyen <marc.riera.irigoyen@gmail.com>
+2017-2019, Hèctor Alòs i Font <hectoralos@gmail.com>
+2007-2019, Gema Ramírez Sánchez <gramirez@prompsit.com>
+2013-2019, Kevin Brubeck Unhammer <unhammer@fsfe.org>
+2017-2019, Donís Seguí <donissegui@gmail.com>
+2018, Alberto Navalon <alberto.navalonlillo@gmail.com>
+2007-2018, Mikel L. Forcada <mlf@dlsi.ua.es>
+2007-2018, Francis M. Tyers <ftyers@prompsit.com>
+2018, Sushain Cherivirala <sushain@skc.name>
 2007-2014, Sergio Ortiz Rojas <sergio.ortiz@gmail.com>
 2008-2012, Jim O'Regan <joregan@gmail.com>
 2012, Anthony J. Bentley <anthony@anjbe.name>
